estrutura de pastas
ajustando responsividade e estrutura de pastas

--- a/views/pages/detalhes.ejs
+++ b/views/pages/detalhes.ejs
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/style/detalhes.css">
         <link rel="stylesheet" href="/style/headerGlobal.css">
         <link rel="stylesheet" href="/style/categorias.css">
+        <link rel="stylesheet" href="/style/home.css">
 
 
         <!-- Fonts -->
