--- a/views/pages/login-cadastro.ejs
+++ b/views/pages/login-cadastro.ejs
@@ -8,6 +8,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="/style/login-cadastro.css">
     <link rel="stylesheet" href="/style/headerGlobal.css">
+    <link rel="stylesheet" href="/style/home.css">
     
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
