--- a/views/pages/painel-usuario.ejs
+++ b/views/pages/painel-usuario.ejs
@@ -7,6 +7,7 @@
     <title>Painel do usuario</title>
     <link rel="stylesheet" href="/style/headerGlobal.css">
     <link rel="stylesheet" href="/style/painel-usuario.css">
+    <link rel="stylesheet" href="/style/home.css">
 
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
