--- a/views/pages/carrinho.ejs
+++ b/views/pages/carrinho.ejs
@@ -7,7 +7,8 @@
     <title>Carrinho</title>
     <link rel="stylesheet" href="/style/headerGlobal.css">
     <link rel="stylesheet" href="/style/carrinho.css">
-
+    <link rel="stylesheet" href="/style/home.css">
+    
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
