--- a/views/pages/categorias.ejs
+++ b/views/pages/categorias.ejs
@@ -8,6 +8,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="/style/categorias.css">
     <link rel="stylesheet" href="/style/headerGlobal.css">
+    <link rel="stylesheet" href="/style/home.css">
 
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
