--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/style/home.css" />
     <link rel="stylesheet" href="/style/headerGlobal.css">
     <link rel="stylesheet" href="/style/footerglobal.css">
+    <link rel="stylesheet" href="/style/home.css">
   </head>
 
   <body>
