--- a/views/pages/pagamento.ejs
+++ b/views/pages/pagamento.ejs
@@ -7,6 +7,7 @@
     <title>Pagemento</title>
     <link rel="stylesheet" href="/style/headerGlobal.css">
     <link rel="stylesheet" href="/style/pagamento.css">
+    <link rel="stylesheet" href="/style/home.css">
 
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
