--- a/src/views/pages/categorias.ejs
+++ b/src/views/pages/categorias.ejs
@@ -8,6 +8,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="/style/categorias.css">
     <link rel="stylesheet" href="/style/headerGlobal.css">
+    <link rel="stylesheet" href="/style/footerglobal.css">
 
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -134,11 +135,7 @@
 
     </main>
 
-
-
-    <footer>
-
-    </footer>
+    <%- include('../components/footer.ejs')  %> 
     
 </body>
 </html>
