--- a/src/views/pages/detalhes.ejs
+++ b/src/views/pages/detalhes.ejs
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/style/detalhes.css">
         <link rel="stylesheet" href="/style/headerGlobal.css">
         <link rel="stylesheet" href="/style/categorias.css">
+        <link rel="stylesheet" href="/style/footerglobal.css">
 
 
         <!-- Fonts -->
@@ -105,6 +106,8 @@
             </article>
             
         </main>
+
+        <%- include('../components/footer.ejs')  %> 
 
     </body>
 </html>
