--- a/src/views/pages/carrinho.ejs
+++ b/src/views/pages/carrinho.ejs
@@ -7,6 +7,7 @@
     <title>Carrinho</title>
     <link rel="stylesheet" href="/style/headerGlobal.css">
     <link rel="stylesheet" href="/style/carrinho.css">
+    <link rel="stylesheet" href="/style/footerglobal.css">
 
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -141,5 +142,8 @@
         </div>
     </div>
     </main>
+
+    <%- include('../components/footer.ejs')  %> 
+
 </body>
 </html>
