--- a/src/views/pages/login-cadastro.ejs
+++ b/src/views/pages/login-cadastro.ejs
@@ -8,6 +8,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="/style/login-cadastro.css">
     <link rel="stylesheet" href="/style/headerGlobal.css">
+    <link rel="stylesheet" href="/style/footerglobal.css">
     
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,6 +17,14 @@
 
 </head>
 <body>
+
     <%- include('../components/header.ejs') %>
+
+<main>
+
+</main>
+
+    <%- include('../components/footer.ejs')  %> 
+
 </body>
 </html>
