--- a/src/views/pages/pagamento.ejs
+++ b/src/views/pages/pagamento.ejs
@@ -7,6 +7,7 @@
     <title>Pagemento</title>
     <link rel="stylesheet" href="/style/headerGlobal.css">
     <link rel="stylesheet" href="/style/pagamento.css">
+    <link rel="stylesheet" href="/style/footerglobal.css">
 
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,6 +16,14 @@
     />
 </head>
 <body>
+
     <%- include('../components/header.ejs') %>
+
+<main>
+
+</main>
+
+    <%- include('../components/footer.ejs')  %> 
+
 </body>
 </html>
