--- a/src/views/pages/painel-usuario.ejs
+++ b/src/views/pages/painel-usuario.ejs
@@ -7,6 +7,7 @@
     <title>Painel do usuario</title>
     <link rel="stylesheet" href="/style/headerGlobal.css">
     <link rel="stylesheet" href="/style/painel-usuario.css">
+    <link rel="stylesheet" href="/style/footerglobal.css">
 
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -80,5 +81,8 @@
             </div>
         </div>
     </main>
+
+    <%- include('../components/footer.ejs')  %> 
+
 </body>
 </html>
