--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -10,11 +10,11 @@
     </div>
     <div class="menu">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="/home">Home</a></li>
         <li><a href="#">Promoções</a></li>
         <li><a href="#">Produtos</a></li>
         <li><a href="#">Sobre</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="/login-cadastro">Login</a></li>
       </ul>
     </div>
     <div class="icon-car">
