exibindo arquivos do banco na tela e organização do crude sequelize

--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="/home">Home</a></li>
         <li><a href="#">Promoções</a></li>
-        <li><a href="#">Produtos</a></li>
+        <li><a href="/categorias">Produtos</a></li>
         <li><a href="#">Sobre</a></li>
         <li><a href="/login-cadastro">Login</a></li>
       </ul>
