--- a/src/views/admin/cadastroProduto.ejs
+++ b/src/views/admin/cadastroProduto.ejs
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-        <%-include('../components/header') %>
+        <!-- <%-include('../components/header') %> -->
 
 <main>
 
