--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -15,6 +15,7 @@
         <li><a href="/categorias">Produtos</a></li>
         <li><a href="#">Sobre</a></li>
         <li><a href="/login-cadastro">Login</a></li>
+        <li><a href="/admin/produtos">admin produtos teste</a></li>
       </ul>
     </div>
     <div class="icon-car">
