--- a/src/views/admin/produtos-total.ejs
+++ b/src/views/admin/produtos-total.ejs
@@ -15,7 +15,8 @@
         <%-include('../components/header') %>
 
 <main>
-        <a style="background-color: deepskyblue;"href="/produtosCadastro">Cadastrar Novo Produto</a>
+        
+        <a style="background-color: deepskyblue;"href="/admin/produtosCadastro">Cadastrar Novo Produto</a>
         <table> 
                 <thead>
                         <tr>
