--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -1,4 +1,4 @@
-<header>
+<header style="background-color: rgb(183, 228, 247);">
   <div class="headerpai">
   <div class="logo">
       <span>D</span>ev<span>Game</span>
