--- a/src/views/admin/detalhesProduto.ejs
+++ b/src/views/admin/detalhesProduto.ejs
@@ -52,7 +52,8 @@
         <p class="p"><b>Nome:</b> <%= produto.nome%></p>
         <p class="p"><b>imagem:</b> <%=produto.imagem %></p>
         <p class="p"><b>Preço:</b> <%=produto.preco %></p>
-        <p class="p"><b>Descrição:</b> <%=produto.descricao %></p>
+        <p class="p"><b>Fabricante:</b> <%=produto.id_fabricante %></p>
+        <!-- <p class="p"><b>Descrição:</b> <%=produto.descricao %></p> -->
         <p class="p"><b>Quantidade:</b> <%=produto.quantidade %></p>
         <p class="p">
             <% if (produto.ativo === 0) { %>
