--- a/src/views/admin/cadastroProduto.ejs
+++ b/src/views/admin/cadastroProduto.ejs
@@ -19,7 +19,7 @@
     <h2 align="center">Cadastro de Produto</h2>
     <br>
    
-    <form style="display: flex; flex-direction: column; align-items: center; margin: 20px;" action="admin/produtosCadastro" method="POST">
+    <form style="display: flex; flex-direction: column; align-items: center; margin: 20px;" action="/admin/produtosCadastro" method="POST">
         <label for="nome">nome</label>
         <br>
         <input class="border-2 border-green-400" type="text" id="nome" name="nome" required>
