--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -11,7 +11,7 @@
     <div class="menu">
       <ul>
         <li><a href="/home">Home</a></li>
-        <li><a href="#">Promoções</a></li>
+        <li><a href="/promocao">Promoções</a></li>
         <li><a href="/categorias">Produtos</a></li>
         <li><a href="#">Sobre</a></li>
         <li><a href="/login-cadastro">Login</a></li>
