Visualizaçao da categorias

--- a/src/public/style/categorias.css
+++ b/src/public/style/categorias.css
@@ -6,14 +6,15 @@
   max-width: 100vw;
 }
 .filtro-pai{
-    
-  padding: 20px;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .filtro{
-  border: 2px solid gray;
+  background: #fff;
+
+  /* border: 2px solid gray; */
   padding: 20px;
   border-radius: 10px;
 }
