--- a/src/views/pages/detalhes.ejs
+++ b/src/views/pages/detalhes.ejs
@@ -25,7 +25,7 @@
             <%- include('../components/header.ejs') %>
            
         </header>
-        <main>
+        <main class="main">
             <article>
                 <section>
                     <div class="detalhes">
