--- a/src/public/style/detalhes.css
+++ b/src/public/style/detalhes.css
@@ -6,7 +6,7 @@
     outline: none;
     box-sizing: border-box;
 }
-main{
+.main{
     display: flex;
     flex-direction: column;
     -webkit-box-pack: start;
